# agent_part

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.frontend  README.md  README.md.bak  SECURITY.md  docker-compose.yml  init.sql  main.py  mkdocs.yml  nginx.conf  pyproject.toml  run_workflow.py
.claude/: ecc-tools.json  identity.json  settings.json  settings.local.json
.claude/agents/: docs-architect.md
.claude/commands/: add-new-agent-or-service-class.md  add-or-update-api-endpoint-with-tests.md  add-or-update-api-endpoint.md  add-or-update-backend-models-and-tests.md  add-or-update-provider-client.md  feature-development.md  mocking-and-fallback-policy-update.md
.claude/rules/: general.md
.codex/: AGENTS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.trae/: goal.md
.trae/rules/: project_rules.md
docs/: class-diagram.mermaid  sequence-diagram.mermaid  system_design.md
docs-site/: index.md
docs-site/concepts/: architecture.md
docs-site/getting-started/: installation.md  quickstart.md
documents/: 2026-03-23_商品视觉生成系统开发计划.md  操作文档.md
frontend/: dump.rdb  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
prd/: MVP_迭代计划_商品视觉生成器.md  PRD_商品视觉生成器_v1.0.md
scripts/migrations/: p1a_tenant_auth.sql  p1b_assets.sql
src/: __init__.py
src/agents/: __init__.py  adapter_config.py  base.py  creative_planner.py  image_generator.py  listing_amazon_adapter.py  listing_asset_loader.py  listing_asset_optimizer.py  listing_compliance_checker.py  listing_compliance_rules.py  listing_copywriter.py  listing_ebay_adapter.py  listing_importer.py  listing_platform_adapter.py  listing_platform_specs.py  listing_push_service.py  listing_rate_limiter.py  listing_retry.py  listing_shopify_adapter.py  orchestrator.py  quality_reviewer.py  rag_creative_planner.py  rag_image_generator.py  rag_quality_reviewer.py  rag_requirement_analyzer.py  requirement_analyzer.py  video_generator.py  visual_designer.py
src/api/: __init__.py  deps.py
src/auth/: __init__.py  api_key.py  context.py
src/clients/: __init__.py  dashscope_image_client.py  kling_video_client.py  openai_compatible_image.py  openai_compatible_llm.py  protocols.py  provider_factory.py  provider_result.py  qwen_embedding_client.py  qwen_llm_client.py
src/config/: __init__.py  settings.py
src/db/: __init__.py  asset_repository.py  conversation_models.py  encrypted_json.py  listing_models.py  model_provider_repository.py  model_provider_seeder.py  models.py  postgres.py  repository.py  vector_store.py
src/graph/: __init__.py  listing_state.py  listing_workflow.py  state.py  workflow.py
src/models/: __init__.py  assets.py  creative.py  listing.py  listing_converter.py  product.py  storyboard.py
src/rag/: __init__.py  chunker.py  document_processor.py  embeddings.py  graph_builder.py  graph_memory.py  graph_search.py  hybrid_retriever.py  logger.py  memory_classifier.py  memory_store.py  query_rewriter.py  reranker.py  retriever.py
src/storage/: __init__.py  base.py  factory.py  local.py
src/tools/: __init__.py
tests/: conftest.py
tests/test_agents/: __init__.py  test_adapter_config.py  test_base.py  test_clients.py  test_listing_agents.py  test_listing_amazon_adapter.py  test_listing_asset_loader.py  test_listing_compliance.py  test_listing_copywriter_llm.py  test_listing_ebay_adapter.py  (+7 more)
(+156 files in other folders)
