[project]
name = "product-visual-generator"
version = "0.1.0"
description = "多Agent协作商品图片/视频自动生成系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LangChain 核心
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",

    # 阿里云通义系列
    "dashscope>=1.14.0",

    # 数据验证
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # API服务
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",

    # HTTP客户端
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",

    # 异步支持
    "asyncio-throttle>=1.0.2",

    # 工具库
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "rich>=13.0.0",

    # Redis
    "redis>=5.0.0",

    # PostgreSQL + PGVector
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pgvector>=0.2.0",
    "psycopg[binary]>=3.1.0",

    # RAG Embedding
    "sentence-transformers>=2.2.0",
    "FlagEmbedding>=1.2.0",
]

[project.optional-dependencies]
dev = [
    # 测试
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "pytest-httpx>=0.28.0",

    # 代码质量
    "ruff>=0.3.0",
    "mypy>=1.8.0",

    # 类型存根
    "types-aiofiles>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ==================== Ruff 配置 ====================
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "ARG001", # unused function argument (common in callbacks)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ==================== MyPy 配置 ====================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "dashscope.*",
    "langchain.*",
    "langgraph.*",
    "pydantic.*",
    "redis.*",
]
ignore_missing_imports = true

# ==================== Pytest 配置 ====================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

# ==================== Coverage 配置 ====================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/__init__.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80